--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,44 @@
-<h1>Hello World</h1>
-<p>See Me in views/static/index.html.erb</p>
+<!-- <section>
+	<div id="nav" class="container-fluid bg-0 text-left">
+	<p>Home</p>
+
+	</div>
+</section>
+ -->
+
+
+<header>
+	<div id="main" class="container-fluid bg-1 text-center">
+			<h1>A BITLY CLONE</h1>
+			<!-- <form action="#" method ="post"> -->
+<!-- 			<form>
+			    <p>Enter a long URL:</p>
+			    <input type="text" name="url[long_url]">
+			    <input type="submit" value="Submit">
+			</form> -->
+
+			<form id="urlform">
+				<div class="col-lg-offset-3 col-lg-6">
+				    <div class="input-group">
+				      <input action="/urls" method="post" type="text" class="form-control" name="url[long_url]" placeholder="Place a long URL here to shorten.." required>
+				      <span class="input-group-btn">
+				        <button type="submit" class="btn btn-primary" >Shorten!</button>
+				      </span>
+				    </div>
+				</div>
+			</form>
+			<div id="shorturl" class = "text-center">
+				<a id="short" href=""></a>
+			</div>
+	</div>
+</header>
+
+<section id="table-section">
+<%= erb :'static/table', layout: false %>
+</section>
+
+<div id="about" class="container-fluid bg-3 text-center">
+	<h2>About</h2>
+	<p>We know that links can be absurdly long, making them unsuited for practical uses.<br> Think long links on Twitter! You'd have no space to say anything!</p>
+	<p>This website solves your long URL problems!</p>
+</div>
